--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -67,6 +67,7 @@ A panel that displays a list of FileThis documents
         <ft-document-panel-settings
             ft-document-panel-heading="These are your documents"
             ft-document-panel-show-download-button=false
+            ft-document-panel-view-as="grid"
         >
         </ft-document-panel-settings>
 
