--- a/ft-document-panel-settings.html
+++ b/ft-document-panel-settings.html
@@ -44,6 +44,7 @@ limitations under the License.
                 new Polymer.IronMeta({type: "setting", key: "ft-document-panel-heading", value: this.ftDocumentPanelHeading});
                 new Polymer.IronMeta({type: "setting", key: "ft-document-panel-show-grid-button", value: this.ftDocumentPanelShowGridButton});
                 new Polymer.IronMeta({type: "setting", key: "ft-document-panel-show-list-button", value: this.ftDocumentPanelShowListButton});
+                new Polymer.IronMeta({type: "setting", key: "ft-document-panel-view-as", value: this.ftDocumentPanelViewAs});
                 new Polymer.IronMeta({type: "setting", key: "ft-document-panel-show-preview-button", value: this.ftDocumentPanelShowPreviewButton});
                 new Polymer.IronMeta({type: "setting", key: "ft-document-panel-show-upload-button", value: this.ftDocumentPanelShowUploadButton});
                 new Polymer.IronMeta({type: "setting", key: "ft-document-panel-show-download-button", value: this.ftDocumentPanelShowDownloadButton});
