--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -67,7 +67,6 @@ A panel that displays a list of FileThis documents
         <ft-document-panel-settings
             ft-document-panel-heading="These are your documents"
             ft-document-panel-show-download-button=false
-            ft-document-panel-view-as="grid"
         >
         </ft-document-panel-settings>
 
@@ -84,6 +83,7 @@ A panel that displays a list of FileThis documents
                 ft-document-panel-heading="{{ftDocumentPanelHeading}}"
                 ft-document-panel-show-grid-button="{{ftDocumentPanelShowGridButton}}"
                 ft-document-panel-show-list-button="{{ftDocumentPanelShowListButton}}"
+                ft-document-panel-view-as-initial="{{ftDocumentPanelViewAsInitial}}"
                 ft-document-panel-show-preview-button="{{ftDocumentPanelShowPreviewButton}}"
                 ft-document-panel-show-upload-button="{{ftDocumentPanelShowUploadButton}}"
                 ft-document-panel-show-download-button="{{ftDocumentPanelShowDownloadButton}}"
@@ -101,6 +101,7 @@ A panel that displays a list of FileThis documents
                 ft-document-panel-heading="{{ftDocumentPanelHeading}}"
                 ft-document-panel-show-grid-button="{{ftDocumentPanelShowGridButton}}"
                 ft-document-panel-show-list-button="{{ftDocumentPanelShowListButton}}"
+                ft-document-panel-view-as-initial="{{ftDocumentPanelViewAsInitial}}"
                 ft-document-panel-show-preview-button="{{ftDocumentPanelShowPreviewButton}}"
                 ft-document-panel-show-upload-button="{{ftDocumentPanelShowUploadButton}}"
                 ft-document-panel-show-download-button="{{ftDocumentPanelShowDownloadButton}}"
