--- a/ft-document-panel-settings-behavior.html
+++ b/ft-document-panel-settings-behavior.html
@@ -208,6 +208,16 @@ limitations under the License.
             this.fire("internal-settings-changed");
         },
 
+        generateSettingsImport: function(indent)
+        {
+            if (!this.hasSettings())
+                return "";
+
+            var theImport = indent + "<link rel=\"import\" href=\"https://connect.filethis.com/{{RELEASE_VERSION}}/ft-document-panel/ft-document-panel-settings.html\">\n";
+
+            return theImport;
+        },
+
         generateSettingsElement: function(indent)
         {
             if (!this.hasSettings())
