--- a/demo/ft-document-panel-settings-editor.html
+++ b/demo/ft-document-panel-settings-editor.html
@@ -16,7 +16,6 @@ limitations under the License.
 
 
 <!-- Imports -->
-<link rel="import" href="../../neon-animation/web-animations.html">  <!-- Need this for paper-dropdown-menu ! -->
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../iron-input/iron-input.html">
 <link rel="import" href="../../paper-checkbox/paper-checkbox.html">
@@ -104,6 +103,7 @@ This element defines a source grid example that allows experimentation with conf
             id="viewAsMenu"
             label="Initially View As"
             style="width:85px; margin-bottom: 0; "
+            no-animations="true"
         >
             <paper-listbox
                 class="dropdown-content"
