--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -38,6 +38,7 @@ limitations under the License.
 <link rel="import" href="../../ft-element-demo/ft-element-demo.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../shadycss/apply-shim.html">
 <link rel="import" href="../ft-document-panel.html">
 <link rel="import" href="../ft-document-panel-settings.html">
 <link rel="import" href="ft-document-panel-settings-editor.html">
